user jdbc template

--- a/src/main/webapp/partials/login.html
+++ b/src/main/webapp/partials/login.html
@@ -17,22 +17,22 @@
 
                         <div class="row">
                             <div class="col-xs-offset-2 col-xs-2">
-                                <a href="/auth/linkedin" class="btn linkedin-fab-btn btn-fab">
+                                <a href="auth/linkedin" class="btn linkedin-fab-btn btn-fab">
                                     <i class="fa fa-linkedin"></i>
                                 </a>
                             </div>
                             <div class="col-xs-2">
-                                <a href="/auth/github" class="btn github-fab-btn btn-fab">
+                                <a href="auth/github" class="btn github-fab-btn btn-fab">
                                     <i class="fa fa-github"></i>
                                 </a>
                             </div>
                             <div  class="col-xs-2">
-                                <a href="/auth/google" class="btn btn-danger btn-fab">
+                                <a href="auth/google" class="btn btn-danger btn-fab">
                                     <i class="fa fa-google-plus"></i>
                                 </a>
                             </div>
                             <div class="col-xs-2">
-                                <a  href="/auth/twitter" class="btn twitter-fab-btn btn-fab">
+                                <a  href="auth/twitter" class="btn twitter-fab-btn btn-fab">
                                     <i class="fa fa-twitter"></i>
                                 </a>
                             </div>
