feat: add user social profile icon to users list

--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -15,13 +15,13 @@
 
         <div class="col-xs-12">
             <blockquote style="margin-left: 16px">
-                <p>This is a demo project for securing an Angularjs project with Spring-security.</p>
+                <p>This is a demo project for social login with Spring-Social Framework.</p>
 
                 <p>For more information and details you can read my Wordpress post <a
-                        href="http://wp.me/pTO1H-150" target="_blank">here</a>.</p>
+                        href="http://wp.me/pTO1H-1do" target="_blank">here</a>.</p>
 
                 <p>The source code of the project is available on GitHub <a
-                        href="https://github.com/samer-abdelkafi/ssng-project" target="_blank">here</a>.</p>
+                        href="https://github.com/samer-abdelkafi/ssong-project" target="_blank">here</a>.</p>
 
                 <p>This demo uses the open source frameworks and projects below:</p>
             </blockquote>
