--- a/src/main/webapp/partials/login.html
+++ b/src/main/webapp/partials/login.html
@@ -28,7 +28,7 @@
                             </div>
                             <div  class="col-xs-2">
                                 <a href="auth/google" class="btn btn-danger btn-fab">
-                                    <i class="fa fa-google-plus"></i>
+                                    <i class="fa fa-google"></i>
                                 </a>
                             </div>
                             <div class="col-xs-2">
