--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -35,7 +35,9 @@
                 <i class="fa fa-github" style="font-size: 55px; color: #009688; background-color: white"></i>
             </div>
             <div class="row-picture" ng-switch-default>
-                <img class="circle" ng-src="resources/img/techno/{{techno.logo}}">
+                <div class="circle">
+                    <div class=" icon-{{techno.logo}}"></div>
+                </div>
             </div>
             <div class="row-content">
                 <h4 class="list-group-item-heading">{{techno.name}}</h4>
