--- a/src/main/webapp/resources/src/css/main.css
+++ b/src/main/webapp/resources/src/css/main.css
@@ -162,3 +162,11 @@
   width: 3em;
   text-align: center;
 }
+
+.list-group .list-group-item .row-picture div.circle {
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 100%;
+  padding: 1px;
+  width: 56px;
+  height: 56px;
+}
